# SPDX-License-Identifier: MPL-2.0
# SPDX-FileCopyrightText: 2025 The Linux Foundation

[build-system]
requires = [
    "meson-python>=0.18.0",
    "meson>=1.10.0",
    "ninja",
]
build-backend = "mesonpy"

[project]
name = "python-nss-ng"
dynamic = ["version"]
description = "Python bindings for Network Security Services (NSS) and Netscape Portable Runtime (NSPR)"
readme = "README.md"
license = "MPL-2.0 OR GPL-2.0-or-later OR LGPL-2.0-or-later"
license-files = ["LICENSE", "LICENSES/MPL-2.0.txt"]
requires-python = ">=3.10"
authors = [
    {name = "John Dennis", email = "jdennis@redhat.com"},
    {name = "Matthew Watkins", email = "mwatkins@linuxfoundation.org"},
]
maintainers = [
    {name = "Matthew Watkins", email = "mwatkins@linuxfoundation.org"},
]
keywords = [
    "nss",
    "nspr",
    "cryptography",
    "ssl",
    "tls",
    "pki",
    "x509",
    "security",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",

    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "coverage[toml]>=7.13.1",
    "pytest-xdist>=3.8.0",
    "mypy>=1.0.0",
    "hypothesis>=6.0.0",
    "mutmut>=2.4.0",
    "meson>=1.10.0",
    "meson-python>=0.18.0",
    "ninja",
]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "coverage[toml]>=7.13.1",
    "pytest-xdist>=3.8.0",
    "mypy>=1.0.0",
    "hypothesis>=6.0.0",
    "mutmut>=2.4.0",
    "ruff>=0.14.10",
    "build>=1.3.0",
    "meson>=1.10.0",
    "meson-python>=0.18.0",
    "ninja",
]

[project.urls]
Homepage = "http://www.mozilla.org/projects/security/pki/python-nss-ng"
Documentation = "http://www.mozilla.org/projects/security/pki/python-nss-ng"
Repository = "https://github.com/lfreleng-actions/python-nss-ng"
Issues = "https://github.com/lfreleng-actions/python-nss-ng/issues"

[tool.meson-python.args]
# Meson build arguments can be specified here if needed
# For example, to enable debug builds:
# setup = ['-Dbuildtype=debug']

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Note: Use -n0 for serial execution for 100% reliability
# Parallel execution (-n=auto) may have intermittent failures in PKCS12 and SSL tests
# Tests with @pytest.mark.xdist_group("serial") run in same worker to avoid race conditions
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=nss",
    "--cov-report=xml",
    "--cov-report=html",
]
markers = [
    "nss_init: mark test as requiring NSS initialization",
    "requires_db: mark test as requiring NSS database",
    "slow: mark test as slow running",
    "allow_insecure: mark test as allowing insecure/legacy configurations",
    "xdist_group: mark tests to run in the same xdist worker (built-in pytest-xdist marker)",
]

[tool.coverage.run]
source = ["nss"]
branch = true
data_file = ".coverage"
omit = [
    "*/test/*",
    "*/tests/*",
    "*/_version.py",
]

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "S101",  # assert detected (allow in tests)
    "T201",  # print found (intentional in examples)
    "UP006", # Use `X` instead of `typing.X` for type annotations (Python 3.10 compat)
    "UP007", # Use `X | Y` for union types (Python 3.10 compat)
    "UP035", # Import from `typing` is deprecated (Python 3.10 compat)
]

[tool.ruff.lint.per-file-ignores]
# Tests use unittest-style assertions, %-formatting, broad excepts in
# teardown/cleanup, and intentionally bind unused locals to exercise
# the C extension's reference handling. Relax style/lint rules that
# would otherwise force large stylistic rewrites of legacy tests.
"test/**/*.py" = [
    "E402",   # module level import not at top of file
    "E722",   # bare except (intentional in cleanup paths)
    "S101",   # assert detected
    "S105",   # hardcoded password string
    "S106",   # hardcoded password func arg
    "S108",   # probable insecure use of /tmp
    "S110",   # try-except-pass (intentional in cleanup)
    "S602",   # subprocess with shell=True (test harness)
    "S603",   # subprocess call: untrusted input
    "S607",   # starting a process with a partial executable path
    "B007",   # loop control variable not used
    "B904",   # raise from in except (legacy)
    "F401",   # unused import (some imports exercise C ext side effects)
    "F841",   # local variable assigned but never used (ref-counting tests)
    "PT003",  # scope='function' implied
    "PT009",  # use plain assert (legacy unittest-style tests)
    "PT011",  # pytest.raises too broad
    "PT012",  # pytest.raises block contains multiple statements
    "PT027",  # use pytest.raises instead of unittest assertion
    "RET504", # unnecessary assignment before return
    "RUF059", # unused unpacked variable
    "SIM102", # nested if
    "SIM103", # needless bool
    "SIM105", # use contextlib.suppress
    "SIM108", # use ternary
    "SIM113", # use enumerate
    "SIM115", # use context manager
    "SIM117", # nested with statements
    "UP031",  # %-format -> f-string (legacy test output)
    "UP038",  # isinstance tuple syntax

]
"doc/examples/*.py" = [
    "T201",   # print found
    "S105",   # hardcoded password
    "S106",   # hardcoded password func arg
    "UP031",  # legacy %-formatting in example output
    # Additional relaxations for legacy demonstration scripts.
    # These examples predate modern Python style and intentionally
    # use idioms (Python 2 future imports, single-letter loop
    # variables, terse one-liners, broad excepts) that we don't
    # want to rewrite just to satisfy lint.
    "E402",   # module-level import not at top of file
    "E701",   # multiple statements on one line (colon)
    "E703",   # statement ends with a semicolon
    "E741",   # ambiguous variable name (l, I, O)
    "F401",   # unused import
    "F841",   # unused local variable
    "I001",   # un-sorted / un-formatted import block
    "RET504", # unnecessary assignment before return
    "RET505", # unnecessary else after return
    "S110",   # try-except-pass
    "S112",   # try-except-continue
    "SIM102", # nested if
    "SIM105", # use contextlib.suppress
    "SIM108", # use ternary
    "UP010",  # unnecessary __future__ import
    "UP024",  # replace aliased exceptions with builtins
    "UP032",  # use f-string instead of format
]
"test/setup_certs.py" = ["S603", "S607"]  # Allow subprocess calls in cert setup
# Build-time version helper that shells out to the trusted `git` binary.
"scripts/meson-version.py" = ["S603", "S607"]

[tool.ruff.lint.isort]
known-first-party = ["nss"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
disallow_any_generics = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
# Exclude legacy NSPR socket / SSL example scripts and the matching
# integration tests from mypy. These predate Python 3 in places
# (six.moves imports, str/bytes mixing, Socket vs SSLSocket
# assignments) and exist primarily as historical documentation /
# integration coverage of the NSS API surface. Cleaning them up to
# satisfy strict typing would require a full Py3 modernisation
# pass and is out of scope for the tooling sync. ``exclude`` is
# given as a multi-line regex matching file paths relative to the
# project root.
exclude = [
    "^mutants/",
    "^doc/examples/",
    "^test/test_client_server\\.py$",
    "^test/test_zzz_ocsp\\.py$",
]

# Ignore missing imports for C extension modules
[[tool.mypy.overrides]]
module = [
    "nss.*",
    "nss",
    "_pytest.*",
    "pytest",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "test.*"
# Allow intentional type errors in tests that verify runtime type
# checking (arg-type / call-arg). Legacy NSPR socket / SSL idioms
# in the older integration tests are handled by the file-path
# ``exclude`` above rather than per-module overrides, because the
# test directory has no ``__init__.py`` and module-name patterns
# do not reliably match.
disable_error_code = [
    "arg-type",
    "call-arg",
]

[tool.mutmut]
paths_to_mutate = "src/deprecations.py:src/secure_logging.py:src/nss_context.py"
backup = false
runner = "python -m pytest -x -q"
tests_dir = "test"
dict_synonyms = ["Struct", "Named"]

[tool.cibuildwheel]
skip = ["pp*", "*-musllinux*"]
build-verbosity = 1

[tool.cibuildwheel.linux]
before-all = "yum install -y nss-devel nspr-devel pkg-config || apt-get update && apt-get install -y libnss3-dev libnspr4-dev pkg-config"

[tool.cibuildwheel.macos]
before-all = "brew install nss nspr pkg-config"

[tool.uv]
# Supply-chain cooldown: do not resolve anything published in the last
# 7 days (rolling window; uv records it as a relative span in uv.lock).
# Requires uv >= 0.9.17 for the relative-duration ("7 days") form.
exclude-newer = "7 days"
